--- a/config/database.yml
+++ b/config/database.yml
@@ -1,11 +1,13 @@
 default: &default
   adapter: mysql2
   encoding: utf8mb4
-#  host: db
-  host: localhost
-  username: <%= ENV['MYSQL_USER'] %>
-  password: <%= ENV['MYSQL_PASSWORD'] %>
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  username: <%= ENV['DB_USERNAME'] %>
+  password: <%= ENV['DB_PASSWORD'] %>
+  port: <%= ENV['DB_PORT'] %>
+  host: <%= ENV['DB_HOST'] %>
+  database: <%= ENV['DB_NAME'] %>
+  socket: /var/run/mysqld/mysqlx.sock
 
 development:
   <<: *default
