--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,9 +6,11 @@ services:
       NODE_ENV: development
       RAILS_ENV: development
       WEBPACKER_DEV_SERVER_HOST: 0.0.0.0
-      MYSQL_USER: mysql
-      MYSQL_PASSWORD: example
-
+      DB_USERNAME: root
+      DB_PASSWORD: root
+      DB_NAME: bosco_gurin
+      DB_PORT: 3306
+      DB_HOST: db
     build:
       context: .
       args:
@@ -26,17 +28,25 @@ services:
 
     ports:
       - "3000:3000"
-      - "3035:3035"
 
     depends_on:
       - db
 
   db:
     image: mysql:5.7
+    restart: always
     environment:
-      MYSQL_PASSWORD: example
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_USERNAME: root
+      MYSQL_PASSWORD: root
+        - '3306:3306'
+    expose:
+      - '3306'
     volumes:
       - db_data:/var/run/mysqld
-
+    logging:
+      driver: none
+    ports:
+      - 3306
 volumes:
   db_data:
