Added staging config

--- a/config/webpacker.yml
+++ b/config/webpacker.yml
@@ -75,7 +75,6 @@ development:
     watch_options:
       ignored: '**/node_modules/**'
 
-
 test:
   <<: *default
   compile: true
@@ -94,3 +93,7 @@ production:
 
   # Cache manifest.json for performance
   cache_manifest: true
+  
+  staging:
+  <<: *default
+  compile: true
