--- a/config/webpacker.yml
+++ b/config/webpacker.yml
@@ -94,6 +94,13 @@ production:
   # Cache manifest.json for performance
   cache_manifest: true
   
-  staging:
+staging:
   <<: *default
-  compile: true
+  # Production depends on precompilation of packs prior to booting for performance.
+  compile: false
+
+  # Extract and emit a css file
+  extract_css: true
+
+  # Cache manifest.json for performance
+  cache_manifest: true
