--- a/Dockerfile.multistage.staging
+++ b/Dockerfile.multistage.staging
@@ -10,7 +10,7 @@ WORKDIR $HOME
 
 # Add Nodejs, Yarn to the repository and install necessary packages
 ARG BUILD_PACKAGES="build-essential"
-ARG DEV_PACKAGES="libnotify-dev yaml-dev zlib-dev nodejs yarn default-libmysqlclient-dev"
+ARG DEV_PACKAGES="libnotify-dev nodejs yarn default-libmysqlclient-dev"
 ARG RUBY_PACKAGES="tzdata imagemagick"
 RUN curl https://deb.nodesource.com/setup_12.x | bash \
     && curl https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add - \
