--- a/Dockerfile.multistage.staging
+++ b/Dockerfile.multistage.staging
@@ -21,8 +21,8 @@ RUN curl https://deb.nodesource.com/setup_12.x | bash \
 
 COPY ["Gemfile*", "package.json", "yarn.lock", "$HOME/"]
 
-RUN bundle config \
-    && bundle install --without development:test:assets -j4 --retry 3 --path=vendor/bundle \
+RUN bundle config set without 'development:test:assets' \
+    && bundle install -j4 --retry 3 --path=vendor/bundle \
     # Remove unneeded files (cached *.gem, *.o, *.c)
     && rm -rf vendor/bundle/ruby/2.7.0/cache/*.gem \
     && find vendor/bundle/ruby/2.7.0/gems/ -name "*.c" -delete \
