--- a/Dockerfile.multistage.staging
+++ b/Dockerfile.multistage.staging
@@ -29,7 +29,7 @@ RUN bundle config set without 'development:test:assets' \
     && find vendor/bundle/ruby/2.7.0/gems/ -name "*.o" -delete
 
 RUN yarn install --pure-lockfile
-RUN /bin/rails webpacker:compile
+RUN rails webpacker:compile
 
 COPY . $HOME
 
