--- a/Dockerfile.multistage.staging
+++ b/Dockerfile.multistage.staging
@@ -10,8 +10,8 @@ WORKDIR $HOME
 
 # Add Nodejs, Yarn to the repository and install necessary packages
 ARG BUILD_PACKAGES="build-essential"
-ARG DEV_PACKAGES="libnotify-dev nodejs yarn default-libmysqlclient-dev"
-ARG RUBY_PACKAGES="tzdata imagemagick"
+ARG DEV_PACKAGES="libnotify-dev yarn"
+ARG REQUIRED_PACKAGES="tzdata imagemagick default-libmysqlclient-dev nodejs"
 RUN curl https://deb.nodesource.com/setup_12.x | bash \
     && curl https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add - \
     && echo "deb https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list \
@@ -49,9 +49,9 @@ ENV HOME /app
 WORKDIR $HOME
 
 # Add Nodejs to the repository and install necessary packages
-ARG PACKAGES="tzdata imagemagick nodejs"
+ARG REQUIRED_PACKAGES="tzdata imagemagick default-libmysqlclient-dev nodejs"
 RUN curl https://deb.nodesource.com/setup_12.x | bash \
-   && apt-get update -qq && apt-get install -y --no-install-recommends $PACKAGES  \
+   && apt-get update -qq && apt-get install -y --no-install-recommends $REQUIRED_PACKAGES  \
    && rm -rf /var/lib/apt/lists/*
     
 COPY --from=build-env $HOME $HOME
