--- a/Dockerfile.multistage.staging
+++ b/Dockerfile.multistage.staging
@@ -16,7 +16,7 @@ RUN curl https://deb.nodesource.com/setup_12.x | bash \
     && curl https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add - \
     && echo "deb https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list \
     && apt-get update -qq \
-    && apt-get install -y --no-install-recommends $BUILD_PACKAGES $DEV_PACKAGES $RUBY_PACKAGES  \
+    && apt-get install -y --no-install-recommends $BUILD_PACKAGES $DEV_PACKAGES $REQUIRED_PACKAGES  \
     && rm -rf /var/lib/apt/lists/*
 
 COPY ["Gemfile*", "package.json", "yarn.lock", "$HOME/"]
