--- a/Dockerfile.multistage.staging
+++ b/Dockerfile.multistage.staging
@@ -29,12 +29,12 @@ RUN bundle config set without 'development:test:assets' \
     && find vendor/bundle/ruby/2.7.0/gems/ -name "*.o" -delete
 
 RUN yarn install --pure-lockfile
-#RUN bundle exec rails webpacker:compile
+RUN bundle exec rails webpacker:compile
 
 COPY . $HOME
 
 # Remove folders not needed in resulting image
-RUN rm -rf node_modules tmp/cache app/assets vendor/assets spec
+RUN rm -rf node_modules tmp/cache app/assets/images app/assets/stylesheets vendor/assets spec
 
 ############### Build step done ###############
 
