--- a/Dockerfile.multistage.staging
+++ b/Dockerfile.multistage.staging
@@ -6,6 +6,7 @@ ENV RAKE_ENV='staging'
 ENV NODE_ENV='staging'
 
 ENV DOMAIN_NAME=$DOMAIN_NAME
+ENV SECRET_KEY_BASE=$SECRET_KEY_BASE
 
 ENV HOME /app
 WORKDIR $HOME
@@ -49,6 +50,7 @@ ENV RAKE_ENV='staging'
 ENV NODE_ENV='staging'
 
 ENV DOMAIN_NAME=$DOMAIN_NAME
+ENV SECRET_KEY_BASE=$SECRET_KEY_BASE
 
 ENV HOME /app
 WORKDIR $HOME
