--- a/Dockerfile.multistage.staging
+++ b/Dockerfile.multistage.staging
@@ -5,8 +5,8 @@ ENV RAILS_ENV='staging'
 ENV RAKE_ENV='staging'
 ENV NODE_ENV='staging'
 
-ENV DOMAIN_NAME="$DOMAIN_NAME"
-ENV SECRET_KEY_BASE="$SECRET_KEY_BASE"
+ARG DOMAIN_NAME=$DOMAIN_NAME
+ARG SECRET_KEY_BASE=$SECRET_KEY_BASE
 
 ENV HOME /app
 WORKDIR $HOME
@@ -49,8 +49,8 @@ ENV RAILS_ENV='staging'
 ENV RAKE_ENV='staging'
 ENV NODE_ENV='staging'
 
-ENV DOMAIN_NAME="$DOMAIN_NAME"
-ENV SECRET_KEY_BASE="$SECRET_KEY_BASE"
+ARG DOMAIN_NAME=$DOMAIN_NAME
+ARG SECRET_KEY_BASE=$SECRET_KEY_BASE
 
 ENV HOME /app
 WORKDIR $HOME
