--- a/Dockerfile.multistage.staging
+++ b/Dockerfile.multistage.staging
@@ -5,7 +5,7 @@ ENV RAILS_ENV='staging'
 ENV RAKE_ENV='staging'
 ENV NODE_ENV='staging'
 
-ARG DOMAIN_NAME=$DOMAIN_NAME
+ENV DOMAIN_NAME=$DOMAIN_NAME
 ARG SECRET_KEY_BASE=$SECRET_KEY_BASE
 
 ENV HOME /app
