--- a/Dockerfile.multistage.staging
+++ b/Dockerfile.multistage.staging
@@ -1,8 +1,10 @@
 FROM public.ecr.aws/bitnami/ruby:2.7 as build-env
 SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 
-ARG RAILS_ENV=$RAILS_ENV
-ARG NODE_ENV=$NODE_ENV
+ARG RAILS_VAR=$RAILS_ENV
+ARG NODE_VAR=$NODE_ENV
+ENV RAILS_ENV=$RAILS_VAR
+ENV NODE_ENV=$NODE_VAR
 
 ARG DOMAIN_NAME=$DOMAIN_NAME
 ARG SECRET_KEY_BASE=$SECRET_KEY_BASE
@@ -34,7 +36,8 @@ RUN yarn install --pure-lockfile
 
 COPY . $HOME
 
-RUN RAILS_ENV=staging bundle exec rake assets:precompile
+RUN bundle exec rails webpacker:install
+   && bundle exec rake assets:precompile
 
 # Remove folders not needed in resulting image
 RUN rm -rf node_modules tmp/cache app/assets/images app/assets/stylesheets vendor/assets spec
@@ -44,11 +47,11 @@ RUN rm -rf node_modules tmp/cache app/assets/images app/assets/stylesheets vendo
 FROM public.ecr.aws/bitnami/ruby:2.7-prod
 SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 
-ARG RAILS_ENV=$RAILS_ENV
-ARG NODE_ENV=$NODE_ENV
+#ARG RAILS_ENV=$RAILS_ENV
+#ARG NODE_ENV=$NODE_ENV
 
-ARG DOMAIN_NAME=$DOMAIN_NAME
-ARG SECRET_KEY_BASE=$SECRET_KEY_BASE
+#ARG DOMAIN_NAME=$DOMAIN_NAME
+#ARG SECRET_KEY_BASE=$SECRET_KEY_BASE
 
 ENV HOME /app
 WORKDIR $HOME
