--- a/Dockerfile.multistage.staging
+++ b/Dockerfile.multistage.staging
@@ -1,10 +1,8 @@
 FROM public.ecr.aws/bitnami/ruby:2.7 as build-env
 SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 
-ARG RAILS_VAR=$RAILS_ENV
-ARG NODE_VAR=$NODE_ENV
-ENV RAILS_ENV=$RAILS_VAR
-ENV NODE_ENV=$NODE_VAR
+ARG RAILS_ENV=$RAILS_ENV
+ARG NODE_ENV=$NODE_ENV
 
 ARG DOMAIN_NAME=$DOMAIN_NAME
 ARG SECRET_KEY_BASE=$SECRET_KEY_BASE
@@ -46,12 +44,6 @@ RUN rm -rf node_modules tmp/cache app/assets/images app/assets/stylesheets vendo
 
 FROM public.ecr.aws/bitnami/ruby:2.7-prod
 SHELL ["/bin/bash", "-o", "pipefail", "-c"]
-
-#ARG RAILS_ENV=$RAILS_ENV
-#ARG NODE_ENV=$NODE_ENV
-
-#ARG DOMAIN_NAME=$DOMAIN_NAME
-#ARG SECRET_KEY_BASE=$SECRET_KEY_BASE
 
 ENV HOME /app
 WORKDIR $HOME
