--- a/Dockerfile.multistage.staging
+++ b/Dockerfile.multistage.staging
@@ -34,8 +34,7 @@ RUN yarn install --pure-lockfile
 
 COPY . $HOME
 
-RUN bundle exec rails webpacker:install \
-   && bundle exec rake assets:precompile
+RUN bundle exec rake assets:precompile
 
 # Remove folders not needed in resulting image
 RUN rm -rf node_modules tmp/cache app/assets/images app/assets/stylesheets vendor/assets spec
