--- a/docker/web/nginx.conf
+++ b/docker/web/nginx.conf
@@ -1,18 +1,30 @@
 worker_processes  auto;
 error_log  /var/log/nginx/error.log warn;
 pid        /var/run/nginx.pid;
+
 events {
-    worker_connections  1024;
+    worker_connections  512;
 }
+
 http {
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
-log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
-                      '$status $body_bytes_sent "$http_referer" '
-                      '"$http_user_agent" "$http_x_forwarded_for"';
-access_log /var/log/nginx/access.log  main;
-sendfile        on;
-keepalive_timeout  14;
-proxy_http_version 1.1;
-include conf.d/*.conf;
+    server_tokens off;
+
+    charset utf-8;
+
+    gzip on;
+    gzip_http_version 1.1;
+    gzip_comp_level 2;
+    gzip_proxied no-store no-cache private expired auth;
+    gzip_min_length 1400;
+    gzip_buffers 16 8k;
+    gzip_types text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript;
+    gzip_vary on;
+
+    access_log /var/log/nginx/access.log main;
+    sendfile        on;
+    keepalive_timeout  14;
+    proxy_http_version 1.1;
+    include conf.d/*.conf;
 }
