--- a/docker/web/application.conf
+++ b/docker/web/application.conf
@@ -1,28 +1,57 @@
-server {
-    listen       80;
-    add_header X-Cache-Status $upstream_cache_status;
-    underscores_in_headers on;
-    error_page  404              /404.html;
-    error_page  403              /403.html;
-    error_page  500 502 503 504  /500.html;
+# 1.Upstream used to define groups of servers, in this case the rails app, that can be referenced by the proxy_pass
+upstream rails_app {
+    server app:3000;
+}
 
-    location /admin {
-        return 200 'ok';
-        }
+# 2.Server part
+server {  
+   # 2.1.Listen to incoming connection on port 80 
+   listen 80;
+   listen [::]:80;
+   return 302 https://$server_name$request_uri;
 
-    include  /etc/nginx/mime.types;
+   # 2.2.Specify your domain. At the moment just localhost
+   server_name localhost;   
 
-    root  /app/public;
+   # 2.3.Specify the public application root  
+   root   $WORKDIR/public;  
 
-    location / {
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Host $http_host;
-    if (-f $request_filename) {
-            break;
-        }
-    if ( !-f $request_filename ) {
-        proxy_pass http://127.0.0.1:3000;
-        break;
-    }
-    }
+   # 2.4.Specify where Nginx should write its logs  
+   access_log /var/log/nginx/access.log;  
+   error_log /var/log/nginx/error.log;   
+  
+   # 2.5.Deny requests for files that should never be accessed such as .rb or .log files  
+   location ~ /\. {    
+      deny all;  
+   }
+   location ~* ^.+\.(rb|log)$ {    
+      deny all;  
+   }  
+ 
+   # 2.5.Serve static (compiled) assets directly if they exist (for rails production)
+   location ~ ^/(assets|images|javascripts|stylesheets|swfs|system)/   {    
+      try_files $uri @rails;     
+      access_log off;    
+      gzip_static on; 
+      expires max;    
+      add_header Cache-Control public;     
+      add_header Last-Modified "";    
+      add_header ETag "";    
+      break;  
+   } 
+  
+   # 2.6.send non-static file requests to the app server  
+   location / {    
+      try_files $uri @rails;  
+   }   
+   
+   # 2.7.reverse proxy redirecting the request to the rails app, port 3000.
+   location @rails {    
+      proxy_set_header  X-Real-IP  $remote_addr;    
+      proxy_set_header  X-Forwarded-For $proxy_add_x_forwarded_for;         
+      proxy_set_header Host $http_host;    
+      proxy_redirect off;    
+      proxy_pass http://rails_app;
+      proxy_read_timeout 900;
+   }
 }
