--- a/docker/web/Dockerfile
+++ b/docker/web/Dockerfile
@@ -13,8 +13,8 @@ COPY public public/
 COPY docker/web/application.conf /tmp/application.conf
 COPY docker/web/nginx.conf /tmp/nginx.conf
 
-RUN chmod +x "$WORKDIR/docker/web/entrypoint.sh"
-ENTRYPOINT ["$WORKDIR/docker/web/entrypoint.sh"]
+RUN chmod +x "docker/web/entrypoint.sh"
+ENTRYPOINT ["docker/web/entrypoint.sh"]
 
 EXPOSE 80
 
