--- a/docker/web/Dockerfile
+++ b/docker/web/Dockerfile
@@ -8,8 +8,8 @@ WORKDIR $HOME
 #    && apt-get install -y --no-install-recommends apache2-utils \
 #    && rm -rf /var/lib/apt/lists/*
 
-COPY public public/
-COPY docker docker/
+COPY public .
+COPY docker .
 COPY docker/web/application.conf /tmp/application.conf
 COPY docker/web/nginx.conf /tmp/nginx.conf
 
