changed mime types path

--- a/docker/web/nginx.conf
+++ b/docker/web/nginx.conf
@@ -7,7 +7,7 @@ events {
 }
 
 http {
-    include       /etc/nginx/mime.types;
+    include       /opt/bitnami/nginx/mime.types;
     default_type  application/octet-stream;
     server_tokens off;
 
