--- a/docker/web/nginx.conf
+++ b/docker/web/nginx.conf
@@ -22,7 +22,7 @@ http {
     gzip_types text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript;
     gzip_vary on;
 
-    access_log /var/log/nginx/access.log main;
+    access_log /var/log/nginx/access.log;
     sendfile        on;
     keepalive_timeout  14;
     proxy_http_version 1.1;
