changed nginx log path

--- a/docker/web/application.conf
+++ b/docker/web/application.conf
@@ -17,8 +17,8 @@ server {
    root   $WORKDIR/public;  
 
    # 2.4.Specify where Nginx should write its logs  
-   access_log /var/log/nginx/access.log;  
-   error_log /var/log/nginx/error.log;   
+   access_log /opt/bitnami/nginx/logs/access.log;  
+   error_log /opt/bitnami/nginx/logs/error.log;   
   
    # 2.5.Deny requests for files that should never be accessed such as .rb or .log files  
    location ~ /\. {    
