--- a/docker/web/nginx.conf
+++ b/docker/web/nginx.conf
@@ -1,5 +1,5 @@
 worker_processes  auto;
-error_log  /var/log/nginx/error.log warn;
+error_log  /opt/bitnami/nginx/logs/error.log warn;
 pid        /var/run/nginx.pid;
 
 events {
@@ -22,7 +22,7 @@ http {
     gzip_types text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript;
     gzip_vary on;
 
-    access_log /var/log/nginx/access.log;
+    access_log /opt/bitnami/nginx/logs/access.log;
     sendfile        on;
     keepalive_timeout  14;
     proxy_http_version 1.1;
