--- a/docker/web/nginx.conf
+++ b/docker/web/nginx.conf
@@ -1,6 +1,6 @@
 worker_processes  auto;
 error_log  /opt/bitnami/nginx/logs/error.log warn;
-pid        /var/run/nginx.pid;
+pid        /opt/bitnami/nginx/logs/nginx.pid;
 
 events {
     worker_connections  512;
