--- a/docker/web/nginx.conf
+++ b/docker/web/nginx.conf
@@ -1,5 +1,5 @@
 worker_processes  auto;
-error_log  /opt/bitnami/nginx/logs/error.log warn;
+error_log  /dev/stderr warn;
 pid        /opt/bitnami/nginx/logs/nginx.pid;
 
 events {
