--- a/docker/web/application.conf
+++ b/docker/web/application.conf
@@ -18,7 +18,7 @@ server {
 
    # 2.4.Specify where Nginx should write its logs  
    access_log /opt/bitnami/nginx/logs/access.log;  
-   error_log /dev/stderr;   
+   error_log stderr warn;   
   
    # 2.5.Deny requests for files that should never be accessed such as .rb or .log files  
    location ~ /\. {    
