--- a/docker/web/nginx.conf
+++ b/docker/web/nginx.conf
@@ -23,8 +23,9 @@ http {
     gzip_vary on;
 
     access_log /opt/bitnami/nginx/logs/access.log;
+    error_log /opt/bitnami/nginx/logs/error.log;
     sendfile        on;
     keepalive_timeout  14;
     proxy_http_version 1.1;
-    include conf.d/*.conf;
+    include /opt/bitnami/nginx/conf/server_blocks/*.conf;
 }
