--- a/docker/web/application.conf
+++ b/docker/web/application.conf
@@ -10,8 +10,8 @@ server {
    listen [::]:8080;
    return 302 https://$server_name$request_uri;
 
-   # 2.2.Specify your domain. At the moment just localhost
-   server_name localhost;   
+   # 2.2.Specify your domain.
+   server_name bosco-gurin-app-607494719.eu-central-1.elb.amazonaws.com;
 
    # 2.3.Specify the public application root  
    root   $WORKDIR/public;  
