moved envsubst commands from entrypoint to docker file

--- a/docker/web/Dockerfile
+++ b/docker/web/Dockerfile
@@ -19,8 +19,9 @@ COPY docker docker/
 COPY docker/web/application.conf /tmp/application.conf
 COPY docker/web/nginx.conf /tmp/nginx.conf
 
-#RUN chown bitnami docker/web/entrypoint.sh
-#RUN chmod +x docker/web/entrypoint.sh
+RUN envsubst '${WORKDIR}' < /tmp/application.conf > /opt/bitnami/nginx/conf/server_blocks/default.conf \
+    && envsubst '${WORKDIR}' < /tmp/nginx.conf > /opt/bitnami/nginx/conf/nginx.conf
+
 ENTRYPOINT ["docker/web/entrypoint.sh"]
 
 EXPOSE 80
