more envsubst madness

--- a/docker/web/application.conf
+++ b/docker/web/application.conf
@@ -13,7 +13,7 @@ server {
    server_name bosco-gurin-app-607494719.eu-central-1.elb.amazonaws.com;
 
    # 2.3.Specify the public application root  
-   root   $WORKDIR/public;  
+   root ${WORKDIR}/public;  
 
    # 2.4.Specify where Nginx should write its logs  
    access_log /opt/bitnami/nginx/logs/access.log;  
