--- a/docker/web/Dockerfile
+++ b/docker/web/Dockerfile
@@ -19,8 +19,8 @@ COPY docker docker/
 COPY docker/web/application.conf /tmp/application.conf
 COPY docker/web/nginx.conf /tmp/nginx.conf
 
-RUN envsubst < /tmp/application.conf > /opt/bitnami/nginx/conf/server_blocks/default.conf \
-    && envsubst < /tmp/nginx.conf > /opt/bitnami/nginx/conf/nginx.conf
+RUN envsubst \$WORKDIR < /tmp/application.conf > /opt/bitnami/nginx/conf/server_blocks/default.conf \
+    && envsubst \$WORKDIR < /tmp/nginx.conf > /opt/bitnami/nginx/conf/nginx.conf
 
 ENTRYPOINT ["docker/web/entrypoint.sh"]
 
