changed server name

--- a/docker/web/application.conf
+++ b/docker/web/application.conf
@@ -6,11 +6,11 @@ upstream rails_app {
 # 2.Server part
 server {  
    # 2.1.Listen to incoming connection on port 80 
-   listen 8080;
-   listen [::]:8080;
+   listen 8080 default_server;
+   listen [::]:8080 default_server;
 
    # 2.2.Specify your domain.
-   server_name bosco-gurin-app-lb-658461832.eu-central-1.elb.amazonaws.com; 
+   server_name _; 
 
    # 2.3.Specify the public application root  
    root ${WORKDIR}/public;  
