--- a/docker/web/nginx.conf
+++ b/docker/web/nginx.conf
@@ -10,8 +10,8 @@ http {
     include       /opt/bitnami/nginx/conf/mime.types;
     default_type  application/octet-stream;
     server_tokens off;
-
     charset utf-8;
+    client_max_body_size 4M;
 
     gzip on;
     gzip_http_version 1.1;
