--- a/docker/app/bosco-gurin-app-task.json
+++ b/docker/app/bosco-gurin-app-task.json
@@ -107,7 +107,7 @@
       "memory": 512,
       "memoryReservation": 256,
       "image": "934187374409.dkr.ecr.eu-central-1.amazonaws.com/gurin:app-production",
-      "essential": true,
+      "essential": false,
       "name": "BoscoGurinApp"
     }
   ],
