--- a/config/storage.yml
+++ b/config/storage.yml
@@ -12,7 +12,7 @@ amazon:
   access_key_id: <%= Rails.application.credentials.config[:aws_s3_access_key_id] %>
   secret_access_key: <%= Rails.application.credentials.config[:aws_s3_secret_access_key] %>
   region: <%= Rails.application.credentials.config[:aws_s3_region] %>
-  bucket: <%= Rails.application.credentials.config[:aws_s3_bucket_name] %>
+  bucket: <%= Rails.application.credentials.config[:aws_s3_bucket] %>
 
 # Remember not to checkin your GCS keyfile to a repository
 # google:
