added AWS tagging

--- a/docker/app/bosco-gurin-app-task.json
+++ b/docker/app/bosco-gurin-app-task.json
@@ -115,5 +115,11 @@
     "FARGATE"
   ],
   "networkMode": "awsvpc",
-  "cpu": "256"
+  "cpu": "256",
+  "tags":[
+     {
+        "key":"client",
+        "value":"bosco-gurin"
+     }
+  ]
 }
