--- a/docker/app/Dockerfile
+++ b/docker/app/Dockerfile
@@ -1,10 +1,6 @@
 FROM public.ecr.aws/bitnami/ruby:2.7 as build-env
 SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 
-ARG RAILS_ENV=$RAILS_ENV
-ARG NODE_ENV=$NODE_ENV
-ARG RAILS_MASTER_KEY=$RAILS_MASTER_KEY
-
 ENV HOME /app
 WORKDIR $HOME
 
@@ -21,14 +17,18 @@ RUN curl https://deb.nodesource.com/setup_12.x | bash \
 
 COPY ["Gemfile*", "package.json", "yarn.lock", "$HOME/"]
 
+ARG RAILS_ENV=$RAILS_ENV
+ARG NODE_ENV=$NODE_ENV
+ARG RAILS_MASTER_KEY=$RAILS_MASTER_KEY
+
 RUN bundle config set without 'development:test:assets' \
 && bundle install -j"$(nproc)" --retry 3 --path=vendor/bundle \
 # Remove unneeded files (cached *.gem, *.o, *.c)
-&& rm -rf vendor/bundle/ruby/2.7.0/cache/*.gem \
-&& find vendor/bundle/ruby/2.7.0/gems/ -name "*.c" -delete \
-&& find vendor/bundle/ruby/2.7.0/gems/ -name "*.o" -delete
+# && rm -rf vendor/bundle/ruby/2.7.0/cache/*.gem \
+# && find vendor/bundle/ruby/2.7.0/gems/ -name "*.c" -delete \
+# && find vendor/bundle/ruby/2.7.0/gems/ -name "*.o" -delete
 
-RUN yarn install --pure-lockfile
+RUN yarn install --ignore-optional --non-interactive
 
 COPY . $HOME
 
@@ -36,6 +36,9 @@ RUN bundle exec rails assets:precompile
 
 # Remove folders not needed in resulting image
 RUN rm -rf node_modules tmp/cache app/assets/images app/assets/stylesheets vendor/assets spec
+&& rm -rf vendor/bundle/ruby/2.7.0/cache/*.gem \
+&& find vendor/bundle/ruby/2.7.0/gems/ -name "*.c" -delete \
+&& find vendor/bundle/ruby/2.7.0/gems/ -name "*.o" -delete
 
 ############### Build step done ###############
 
@@ -43,7 +46,6 @@ FROM public.ecr.aws/bitnami/ruby:2.7-prod
 SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 
 ENV HOME /app
-
 WORKDIR $HOME
 
 # Add Nodejs to the repository and install necessary packages
@@ -57,7 +59,9 @@ COPY --from=build-env $HOME $HOME
 RUN chmod +x docker/app/entrypoint.sh
 
 ENV RAILS_ENV=$RAILS_ENV
+ENV NODE_ENV=$NODE_ENV
 ENV RAILS_MASTER_KEY=$RAILS_MASTER_KEY
+
 ENTRYPOINT ["docker/app/entrypoint.sh"]
 
 EXPOSE 3000
