separated yarn command

--- a/docker/app/Dockerfile
+++ b/docker/app/Dockerfile
@@ -22,13 +22,15 @@ ARG NODE_ENV=$NODE_ENV
 ARG RAILS_MASTER_KEY=$RAILS_MASTER_KEY
 
 RUN bundle config set without 'development:test:assets' \
-&& bundle install -j"$(nproc)" --retry 3 --path=vendor/bundle \
+&& bundle config set --local path 'vendor/bundle' \
+&& bundle install -j"$(nproc)" --retry 3
+
 # Remove unneeded files (cached *.gem, *.o, *.c)
 # && rm -rf vendor/bundle/ruby/2.7.0/cache/*.gem \
 # && find vendor/bundle/ruby/2.7.0/gems/ -name "*.c" -delete \
 # && find vendor/bundle/ruby/2.7.0/gems/ -name "*.o" -delete
 
-&& RUN yarn install --ignore-optional --non-interactive
+RUN yarn install --ignore-optional --non-interactive
 
 COPY . $HOME
 
